--- a/GlobalAnalysisCO2/GlobalAnalysisCO2/MainWindow.xaml
+++ b/GlobalAnalysisCO2/GlobalAnalysisCO2/MainWindow.xaml
@@ -8,29 +8,34 @@
         xmlns:vm="clr-namespace:GlobalAnalysisCO2.ViewModels"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="{Binding ViewTitle}" Height="350" Width="525">
     <Window.DataContext>
-        <vm:MainWindowViewModel />
+        <vm:HomeViewModel />
     </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+            <lvc:CartesianChart Grid.Row="0" x:Name="lvChart">
+                <lvc:CartesianChart.Series>
+                    <lvc:LineSeries Fill="Transparent" StrokeThickness="1.5" PointGeometry="{x:Null}" Values="{Binding ChartValues}" />
+                </lvc:CartesianChart.Series>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Reading" />
+                </lvc:CartesianChart.AxisY>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis ShowLabels="False" />
+                </lvc:CartesianChart.AxisX>
+            </lvc:CartesianChart>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="270*" />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <lvc:CartesianChart Grid.Row="0">
-            <lvc:CartesianChart.Series>
-                <lvc:LineSeries Values="{Binding ChartValues}" Fill="Transparent" StrokeThickness="1.5" PointGeometry="{x:Null}" />
-            </lvc:CartesianChart.Series>
-            <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Reading" />
-            </lvc:CartesianChart.AxisY>
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis ShowLabels="False" />
-            </lvc:CartesianChart.AxisX>
-        </lvc:CartesianChart>
+        <ContentPresenter Content="{Binding}" Grid.Row="0" />
         <UniformGrid Grid.Row="1" Rows="1">
-            <local:NavigationButton Icon="Home" Label="Home" />
-            <local:NavigationButton Icon="Gear" Label="Configuration" />
+            <local:NavigationButton Icon="Home" Label="Home" MouseLeftButtonUp="HomeButton_MouseLeftButtonDown" />
+            <local:NavigationButton Icon="Gear" Label="Configuration" MouseLeftButtonDown="GearButton_MouseLeftButtonDown" />
             <local:NavigationButton Icon="Question" Label="About" />
         </UniformGrid>
     </Grid>
